Fixed an issue where the  input text on the list modal (in dark mode) was black.

--- a/src/styles/listModal.css
+++ b/src/styles/listModal.css
@@ -79,7 +79,7 @@
   border: 1px solid var(--color-form-input);
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-  color: black;
+  color: var(--color-gray);
   background-color: var(--color-form-input);
   transition: border-color 0.3s;
 }
